worked on the feedbacks

--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,10 @@
   width: 100vw;
   height: 100vh;
   position: relative;
+  
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+section{
+  overflow: scroll;
 }
 
 @keyframes logo-spin {
