--- a/src/assets/components/Button/styles.scss
+++ b/src/assets/components/Button/styles.scss
@@ -3,9 +3,8 @@ button{
     padding: 10px 12px;
     outline: none;
     border: none;
-    font-family: Memoirs;
-    font-size: var(--fontSize-14);
-    letter-spacing: var(--letterSpacing);
+    font-family: Futura;
+    font-size: 15px;
 
     &:disabled{
         opacity: 0.7;
