--- a/src/assets/components/FirstSection/Reponsive.scss
+++ b/src/assets/components/FirstSection/Reponsive.scss
@@ -5,6 +5,8 @@
         min-height: fit-content;
         max-height: 100vh;
         padding-top: 0;
+        padding-left: 30px;
+        padding-right: 30px;
         aside{
             width: 100%;
             .introDiv{
