--- a/src/theme.css
+++ b/src/theme.css
@@ -18,6 +18,7 @@
     --font-color : white;
     --font-black:white;
     --white-bg: #0d192b;
+    --icon-github: white
     --icon-hover:white;
     --card-bg:#14253d;
     --whitesmoke-bg: #002245;
