--- a/src/assets/components/SecondSection/Responsive.scss
+++ b/src/assets/components/SecondSection/Responsive.scss
@@ -5,6 +5,8 @@
          height: fit-content;
          padding-top: 30px;
          padding-bottom: 60px;
+         padding-left: 30px;
+         padding-right: 30px;
 
          .serviceHeading{
             width: 100%;
