--- a/src/assets/components/ThirdSection/Reponsive.scss
+++ b/src/assets/components/ThirdSection/Reponsive.scss
@@ -7,6 +7,8 @@
         overflow: hidden;
         flex-direction: column;
         align-items: center;
+        padding-left: 30px;
+        padding-right: 30px;
 
         .cardCtnr{
             .heading{
@@ -61,9 +63,9 @@
             }
         }
     }
-}
-.active{
-    color: blue;
-        max-height: fit-content;
-        padding-bottom: 30px;
+    .active{
+        color: blue;
+            max-height: fit-content;
+            padding-bottom: 30px;
+    }
 }
